test(): adding mocks and unit test library

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
-name: Restart
+name: restart
 version: 0.0.1
 author: Pierre Reliquet
 description: A very simple REST API to handle the low level HttpRequest routing.
 homepage: https://github.com/PierreReliquet/restart
 documentation: https://github.com/PierreReliquet/restart
+dev_dependencies:
+  unittest: any
