--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
 name: restart
 version: 0.0.1
-author: Pierre Reliquet
-description: A very simple REST API to handle the low level HttpRequest routing.
+author: Pierre Reliquet <pierre.reliquet@gmail.com>
+description: Restart is an implementation of a REST API for Dart. The aim is to provide a way of registering easily some endpoints by use of annotations which is similar to many Java API.
 homepage: https://github.com/PierreReliquet/restart
+environment:
+  sdk: 1.5.3
 documentation: https://github.com/PierreReliquet/restart
 dev_dependencies:
   unittest: any
